--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "snaut",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babelify": "^7.3.0",
     "browser-sync": "^2.17.0",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-bower": "0.0.13",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-imagemin": "^3.0.3",
