--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
   "author": "snaut",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-es2015": "^6.16.0",
-    "babelify": "^7.3.0",
     "browser-sync": "^2.17.0",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-bower": "0.0.13",
-    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-imagemin": "^3.0.3",
+    "gulp-plumber": "^1.1.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^2.0.0",
     "imagemin-pngquant": "^5.0.0",
     "jquery": "^3.1.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ignorantic/jetro.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ignorantic/jetro/issues"
+  },
+  "homepage": "https://github.com/ignorantic/jetro#readme"
 }
