--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
-  "name": "jetro",
+  "name": "grey-white",
   "version": "1.0.0",
-  "description": "jetro test project",
+  "description": "grey-white project",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "snaut",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "browser-sync": "^2.17.0",
+    "babel-core": "^6.3.26",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-debug": "^2.1.2",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-plumber": "^1.1.0",
+    "gulp-connect": "^5.0.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-imagemin": "3.0.3",
     "gulp-pug": "^3.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "imagemin-pngquant": "^5.0.0",
-    "pug": "^2.0.0-beta6",
-    "babel-core": "^6.3.26",
-    "babel-plugin-transform-class-properties": "^6.3.13",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "history": "^1.17.0",
+    "imagemin-pngquant": "^5.0.0",
+    "pug": "^2.0.0-beta6",
+    "pump": "^1.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ignorantic/jetro.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ignorantic/jetro/issues"
-  },
-  "homepage": "https://github.com/ignorantic/jetro#readme"
+  "repository": {},
+  "bugs": {},
+  "homepage": ""
 }
