--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browserify": "^13.1.1",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
