--- a/package.json
+++ b/package.json
@@ -17,20 +17,23 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-debug": "^3.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "3.0.3",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "history": "^1.17.0",
+    "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^5.0.0",
     "pug": "^2.0.0-beta6",
-    "pump": "^1.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "repository": {},
