--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "grey-white",
+  "name": "Jetro",
   "version": "1.0.0",
-  "description": "grey-white project",
+  "description": "jetro project",
   "main": "index.js",
   "scripts": {},
   "author": "snaut",
   "license": "ISC",
-  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.3.26",
-    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "browserify": "^14.3.0",
+    "chai": "^3.5.0",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
@@ -22,8 +24,10 @@
     "gulp-connect": "^5.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-debug": "^3.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "3.0.3",
+    "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
@@ -33,8 +37,22 @@
     "gulp-util": "^3.0.7",
     "gulp.spritesmith": "^6.2.1",
     "imagemin-pngquant": "^5.0.0",
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-spec-reporter": "0.0.26",
+    "mocha": "^3.2.0",
+    "phantomjs": "^2.1.7",
     "pug": "^2.0.0-beta6",
-    "vinyl-source-stream": "^1.1.0"
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.9.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   },
   "repository": {},
   "bugs": {},
