--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "repository": {},
   "bugs": {},
