--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-sinon-chai": "^1.3.1",
     "karma-spec-reporter": "0.0.26",
     "mocha": "^3.2.0",
+    "path": "^0.12.7",
     "phantomjs": "^2.1.7",
     "pug": "^2.0.0-beta6",
     "sinon": "^2.1.0",
