--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-imagemin": "3.0.3",
     "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.1.0",
+    "gulp-pug-lint": "^0.1.6",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.3.2",
