--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "babel-core": "^6.3.26",
     "babel-eslint": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "chai": "^3.5.0",
@@ -54,6 +53,7 @@
     "pug": "^2.0.0-beta6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.9.0",
+    "validator": "^7.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0",
     "whatwg-fetch": "^2.0.3"
