--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -19,7 +19,7 @@ rules:
   # Disallows
   no-color-keywords: 1
   no-color-literals: 1
-  no-css-comments: 1
+  no-css-comments: 0
   no-debug: 1
   no-duplicate-properties: 1
   no-empty-rulesets: 1
@@ -42,11 +42,7 @@ rules:
   force-pseudo-nesting: 1
 
   # Name Formats
-  class-name-format: 
-    - 1
-    -
-      allow-leading-underscore: false
-      convention: strictbem
+  class-name-format: 0
   function-name-format: 1
   mixin-name-format:
     - 1
