--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.1",
-    "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
     "gulp-cssmin": "^0.1.7",
     "gulp-debug": "^3.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "3.0.3",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-mocha": "^3.0.1",
     "gulp-pug": "^3.1.0",
     "gulp-pug-lint": "^0.1.6",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^1.6.0",
